# stalker_app

./: .gitignore  Makefile  README.md  docker-compose-local.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/api/v1/: api.py
backend/app/application/: exceptions.py
backend/app/application/dtos/: post.py  token.py  user.py
backend/app/certs/: jwt-public.pem
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/domain/: exceptions.py
backend/app/infra/: di.py
backend/app/presentation/: di.py
backend/app/schemas/: post_schema.py  user_schema.py
backend/app/services/: jwt_service.py  post_service.py  redis_service.py  token_service.py  upload_service.py  user_service.py
backend/docker_compose/: app.yaml
backend/migration/versions/: 0155971ac8f1_add_friends_request_model.py  1f043ce96c14_update_user_model_add_friends_list_table.py  522bbc7022eb_create_token_model_and_update_user_model.py  7528971041a2_init.py
draft_backend_stalker_app/: Dockerfile  Makefile  pyproject.toml
draft_backend_stalker_app/app/: main.py
draft_backend_stalker_app/app/certs/: jwt-private.pem
draft_backend_stalker_app/app/core/: config.py
draft_backend_stalker_app/app/db/: models.py
draft_backend_stalker_app/app/schemas/: post_schema.py
draft_backend_stalker_app/app/services/: jwt_service.py  post_service.py  user_service.py
draft_backend_stalker_app/migration/: env.py
draft_backend_stalker_app/migration/versions/: 9e1d6a80e201_init_db.py
(+65 files in other folders)
