[project]
name = "ddd-stalk-app"
version = "0.1.0"
description = ""
authors = [
    {name = "DiorSavage",email = "mlgbosskorobka97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.121.3,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "faststream (>=0.6.3,<0.7.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
